--- a/src/styling/models.css
+++ b/src/styling/models.css
@@ -230,6 +230,14 @@
 }
 @media (max-width:740px){
 
+    .model-details--wrapper{
+        margin:auto;
+        display: grid;
+        grid-template-columns: repeat(2,50%);
+        grid-template-rows: 2rem 18rem 18rem 1fr;
+        max-width: 95vw;
+        grid: 1rem;
+    }
 }
 @media (max-width:940px){
     .models-filters-wrapper{
@@ -260,13 +268,15 @@
         border-radius: 5px;
         margin: .5rem;
         font-size: .6rem;
-        height:22rem
+        height:22rem;
     }
+
     .model-image--wrapper{
         max-width: 50vw;
         margin: .5rem auto;
         width:100%;
         border-radius: 5px;
+        height: 16rem;
     }
     .model--content--wrapper{
         line-height: 1.1rem;
@@ -274,9 +284,9 @@
     .model-image{
         width:100%;
         object-fit: cover;
-        height:20rem;
+        height:16rem;
         border-radius: 5px;
-        margin-top:0;
+        /* margin-top:0; */
     }
     
     /* Filters */
@@ -293,7 +303,7 @@
         margin:auto;
         display: grid;
         grid-template-columns: repeat(2,50%);
-        grid-template-rows: 2rem 20rem 10rem 1fr;
+        grid-template-rows: 2rem 20rem 13rem 1fr;
         max-width: 95vw;
         grid: 1rem;
     }
@@ -319,7 +329,8 @@
         width:100%;
         grid-column: 1/3;
         grid-row: 3;
-        height:fit-content
+        height:fit-content;
+        margin-bottom: 2rem;
     }
     .model-details--gallery{
         grid-column: 1/3;
